Include font-awesome

--- a/lib/foo_web/templates/layout/app.html.eex
+++ b/lib/foo_web/templates/layout/app.html.eex
@@ -11,6 +11,7 @@
   <body>
     <header>
       <section class="container">
+            <i class="fas fa-camera"></i>
         <nav role="navigation">
           <ul>
             <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
