--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,9 @@
 /* This file is for your main application css. */
 @import "./phoenix.css";
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
 
 /* Alerts and form errors */
 .alert {
